--- a/lib/footer/f-1/index.pug
+++ b/lib/footer/f-1/index.pug
@@ -3,18 +3,29 @@ footer.canhcam-footer-1
 		.container
 			.partner
 				.row
-					.col-4.col-md-2
-						img.img-fluid(src="./img/antuong/partner.png", alt="")
-					.col-4.col-md-2
-						img.img-fluid(src="./img/antuong/partner.png", alt="")
-					.col-4.col-md-2
-						img.img-fluid(src="./img/antuong/partner.png", alt="")
-					.col-4.col-md-2
-						img.img-fluid(src="./img/antuong/partner.png", alt="")
-					.col-4.col-md-2
-						img.img-fluid(src="./img/antuong/partner.png", alt="")
-					.col-4.col-md-2
-						img.img-fluid(src="./img/antuong/partner.png", alt="")
+					.col
+						article.owl-carousel.owl-theme.list-items
+							.item
+								a(href='#')
+									img(src='./img/antuong/partner.png', alt='')
+							.item
+								a(href='#')
+									img(src='./img/antuong/partner.png', alt='')
+							.item
+								a(href='#')
+									img(src='./img/antuong/partner.png', alt='')
+							.item
+								a(href='#')
+									img(src='./img/antuong/partner.png', alt='')
+							.item
+								a(href='#')
+									img(src='./img/antuong/partner.png', alt='')
+							.item
+								a(href='#')
+									img(src='./img/antuong/partner.png', alt='')
+							.item
+								a(href='#')
+									img(src='./img/antuong/partner.png', alt='')
 			.row.my-5
 				.col-md-3.col-12.text-center.text-md-left
 					h4 Giới thiệu
