--- a/lib/footer/f-1/index.sass
+++ b/lib/footer/f-1/index.sass
@@ -17,7 +17,28 @@
 		position: relative
 		+fz(1.2rem)
 		margin-bottom: 1.2rem
-
+	.canhcam-carousel-1
+	+pad(2rem 0)
+	+media-breakpoint-up(lg)
+		+pad(4rem 0)
+	.owl-carousel
+		// Main
+		.owl-stage-outer
+		// Nav
+		.owl-nav
+			button
+				&.owl-prev, &.owl-next
+					+pad(.5rem_)
+					width: 3rem
+					height: 3rem
+					background: darken(color-get($mau,trang),5%)
+					+bor-rad(50%)
+					text-align: center
+					&:focus
+						outline: none
+				&:hover, &.active
+					&.owl-prev, &.owl-next
+						background: color-get($mau,main)
 	.linkfooter
 		.partner
 			+pad(1rem null)
