--- a/lib/header/h-14/index.sass
+++ b/lib/header/h-14/index.sass
@@ -105,7 +105,8 @@
 					color: color-get($mau,main)
 
 	.k-responsive-menu
-		background: color-get($mau,text-1)
+		background: url('../img/antuong/bg_2.png')
+		background-size: cover
 		.navbar-brand
 			color: color-get($mau,trang)
 			img
