--- a/lib/history/h-1/index.pug
+++ b/lib/history/h-1/index.pug
@@ -1,44 +1,46 @@
 section.canhcam-history-1
 	.container
-	h1.antuong-title.upcase.mb-4.mb-lg-5 lịch sử giao dịch
-	.row.justify-content-center
-		.col-8
-			.table-result
-				table.table
-					thead
-						tr
-							th(scope="col") STT
-							th(scope="col") Tên dự án
-							th(scope="col") Ngày đăng ký
-							th(scope="col") Trạng thái
-					tbody
-						tr
-							th(scope="row") 01
-							td Đất nền Gold Hill
-							td 24/10/199
-							td Đang chào bán
-						tr
-							th(scope="row") 01
-							td Đất nền Gold Hill
-							td 24/10/199
-							td Đang chào bán
-						tr
-							th(scope="row") 01
-							td Đất nền Gold Hill
-							td 24/10/199
-							td Đang chào bán
-						tr
-							th(scope="row") 01
-							td Đất nền Gold Hill
-							td 24/10/199
-							td Đang chào bán
-						tr
-							th(scope="row") 01
-							td Đất nền Gold Hill
-							td 24/10/199
-							td Đang chào bán
-						tr
-							th(scope="row") 01
-							td Đất nền Gold Hill
-							td 24/10/199
-							td Đang chào bán
+		.row
+			.col-lg-3
+				include ../../nav/n-8/index.pug
+			.col-lg-9
+				.table-result.mt-5.mt-lg-0
+					h1.antuong-title.upcase.mb-4.mb-lg-5.main lịch sử giao dịch
+					table.table
+						thead
+							tr
+								th(scope="col") STT
+								th(scope="col") Tên dự án
+								th(scope="col") Ngày đăng ký
+								th(scope="col") Trạng thái
+						tbody
+							tr
+								th(scope="row") 01
+								td Đất nền Gold Hill
+								td 24/10/199
+								td Đang chào bán
+							tr
+								th(scope="row") 01
+								td Đất nền Gold Hill
+								td 24/10/199
+								td Đang chào bán
+							tr
+								th(scope="row") 01
+								td Đất nền Gold Hill
+								td 24/10/199
+								td Đang chào bán
+							tr
+								th(scope="row") 01
+								td Đất nền Gold Hill
+								td 24/10/199
+								td Đang chào bán
+							tr
+								th(scope="row") 01
+								td Đất nền Gold Hill
+								td 24/10/199
+								td Đang chào bán
+							tr
+								th(scope="row") 01
+								td Đất nền Gold Hill
+								td 24/10/199
+								td Đang chào bán
