--- a/lib/sale-detail/s-1/index.sass
+++ b/lib/sale-detail/s-1/index.sass
@@ -64,7 +64,7 @@ section.canhcam-sale-detail-1
 					+fz(1.2rem)
 					+fw(700)
 					color: color-get($mau,extra)
-	a.btn-contact
+	.btn-contact
 		+pad(.5rem 2rem)
 		+bor(null, solid color-get($mau,main),2px)
 		background: color-get($mau,main)
