--- a/lib/support/s-1/index.pug
+++ b/lib/support/s-1/index.pug
@@ -5,21 +5,28 @@ section.canhcam-suppport-1
 			.col-lg-4.order-lg-2
 				.question
 					h2.question-title.mb-4 Gửi câu hỏi
-					form
+					form.validator
 						.form-group
-							label(for='exampleInputName') Họ tên
-							input#exampleInputEmail1.form-control(type='text')
+							label(for='name') Họ tên
+							input#name.form-control(type='text', data-error="Vui lòng nhập thông tin", required)
+							.help-block.with-errors
 						.form-group
-							label(for='exampleInputEmail') Email
-							input#exampleInputEmail1.form-control(type='text')
+							label(for='Email') Email
+							input#Email.form-control(type='text',  data-error="Vui lòng nhập thông tin", pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$", required)
+							.help-block.with-errors
 						.form-group
-							label(for='exampleInputTitle') Tiêu đề
-							input#exampleInputEmail1.form-control(type='text')
+							label(for='Phone') Số điện thoại
+							input#Phone.form-control(type='text', data-error="Vui lòng nhập thông tin", pattern="^[_A-z0-9]{1,}$", required)
+							.help-block.with-errors
 						.form-group
-							label(for='exampleInputContent') Nội dung
-							textarea#exampleInputEmail1.form-control(type='text')
+							label(for='title') Tiêu đề
+							input#Title.form-control(type='text',)
 						.form-group
-							a(href="#").btn.btn-support.mt-4 Gửi thông tin
+							label(for='sms') Nội dung
+							textarea#sms.form-control(name="sms", cols="30", rows="5")
+						.form-group
+							button.mt-4.btn.btn-support.text-uppercase(type="submit")
+								| Gửi thông tin
 			.col-lg-8.order-lg-1
 				.list-detail.mt-5.mt-lg-0
 					.content
