--- a/lib/support/s-1/index.sass
+++ b/lib/support/s-1/index.sass
@@ -62,7 +62,7 @@ section.canhcam-suppport-1
 					background: darken(color-get($mau,trang),3%)
 				textarea
 					height: 140px
-				a.btn-support
+				.btn-support
 					width: 100%
 					color: color-get($mau,text-2)
 					background: color-get($mau,extra)
