--- a/lib/form/f-1/index.pug
+++ b/lib/form/f-1/index.pug
@@ -1,41 +1,39 @@
 section.canhcam-form-1
 	.container
+		h1.antuong-title.text-uppercase.mb-5 liên hệ
 		.row.info
 			.col-md-5.col-lg-4
-				article.inf.h-100(bg-img="./img/bg/bg.png")
+				article.inf.h-100
 					figure.text-center
-						img.img-fluid(src="./img/logo.png", alt="alt")
 						figcaption
-					h2.h2.text-center.text-md-left Natail SARL - Golf etc.
-					p.text-center.text-md-left 19B Le Thi Rieng, Ben Thanh Ward, Dis.1
+							h2.h2.mb-4.text-center.text-md-left an tường real
+							.detail.text-center.text-md-left 
+								p Tòa nhà Charmington La Pointe - 181 Cao Thằng, P12, Q10, Hồ Chí Minh
+								p Hotline: 01229181919 - 01823837819
+								p Email: Canhcam@gamil.com
 
 			.col-md-7.col-lg-8
-				h3.h3.mt-5.mt-md-0.mb-4 Complete this form to email us your enquiry
-				form.validator
+				form.validator.mt-5.mt-md-0
 					.row
 						.form-group.col-md-6
-							label(for='name') Name
-								span.text-danger (*)
-							input#name.form-control(type='text', placeholder='Name', data-error="Vui lòng nhập thông tin", required)
+							input.form-control(type='text', placeholder='Họ và tên..', data-error="Vui lòng nhập thông tin", required)
 							.help-block.with-errors
 						.form-group.col-md-6
-							label(for='Email') Email
-							input#Email.form-control(type='text', placeholder='Email', data-error="Vui lòng nhập thông tin", pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$", required)
+							input.form-control(type='text', placeholder='Email..', data-error="Vui lòng nhập thông tin", pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$", required)
 							.help-block.with-errors
 					.row
 						.form-group.col-md-6
-							label(for='Phone') Phone
-							input#Phone.form-control(type='text', placeholder='Phone', data-error="Vui lòng nhập thông tin", pattern="^[_A-z0-9]{1,}$", required)
+							input.form-control(type='text', placeholder='Tiêu đề...',data-error="Vui lòng nhập thông tin", required)
 							.help-block.with-errors
 						.form-group.col-md-6
-							label(for='Address') Address
-							input#Address.form-control(type='text', placeholder='Address')
+							input.form-control(type='text', placeholder='Số điện thoại...', data-error="Vui lòng nhập thông tin", pattern="^[_A-z0-9]{1,}$", required)
+							.help-block.with-errors
+						
 					.row
 						.form-group.col
-							label(for='sms') Message
-							textarea#sms.form-control(name="sms", cols="30", rows="5")
+							textarea#sms.form-control(placeholder='Nội dung...' name="sms", cols="30", rows="5")
 
 					.row
-						.col
-							button.btn.btn-outline-primary.text-uppercase(type="submit")
-								| Submit
+						.col.text-right
+							button.btn.btn-send.text-uppercase(type="submit")
+								| Gửi
