--- a/lib/history/h-1/index.sass
+++ b/lib/history/h-1/index.sass
@@ -9,6 +9,10 @@ section.canhcam-history-1
 	+media-breakpoint-up(lg)
 		+pad(4rem null)
 	.table-result
+		+media-breakpoint-up(md)
+			+pad(3rem 2rem)
+			+bor(null, solid color-get($mau,main),1px)
+			border-radius: 5px
 		.result-bold
 			&:last-child
 				td
@@ -17,7 +21,7 @@ section.canhcam-history-1
 			+fz(1.29rem)
 			color: color-get($mau , text-1)
 		.table
-			border: 1px solid #ccc
+			border: 1px solid #e1e1e1
 			+media-breakpoint-down(sm)
 				display: block
 				width: 100%
@@ -46,7 +50,7 @@ section.canhcam-history-1
 					+fz(1.1rem)
 					+fw(400)
 					color: color-get($mau,text-2)
-					border-right: 1px solid lighten(color-get($mau , main),50%)
+					border-right: 1px solid #e1e1e1
 				td
 					&:last-child
 						border: none
@@ -58,9 +62,9 @@ section.canhcam-history-1
 		tbody
 			tr
 				&:nth-child(even)
-					background: #ebf3fa
+					background: #f1f1f1
 				&:nth-child(odd)
 					background: color-get($mau,trang)
 		thead
-			background: color-get($mau,main)
+			background: #b7b7b7
 			color: color-get($mau,trang)
