--- a/lib/nav/n-8/index.sass
+++ b/lib/nav/n-8/index.sass
@@ -4,6 +4,7 @@
 //////////////////////////////////////
 
 .section.canhcam-nav-8
+	+bor(null,solid color-get($mau,main),1px)
 	.menu-list
 		display: flex
 		flex-direction: column
@@ -14,7 +15,17 @@
 			+pad(.7rem 2rem)
 			color: color-get($mau,text-2)
 			border-bottom: 1px dashed darken(color-get($mau,trang),20%)
-			&.active
+			&:last-child
+				border-bottom: 0
+			&:hover,&.active
 				background: color-get($mau,main)
 				color: color-get($mau,trang)
 				border-bottom: 0
+				padding-bottom: 0.77rem
+				&:last-child
+					padding-bottom: 0.7rem
+	+media-breakpoint-up(lg)
+		border: 0
+		a.item
+			&:last-child
+				border-bottom: 1px dashed darken(color-get($mau,trang),20%)!important
