--- a/templates/contact.pug
+++ b/templates/contact.pug
@@ -4,5 +4,11 @@ block variables
 	- var description = "Description for contact page"
 	- var bodyclass = "contact"
 	- var href = "/contact.html"
+block header
+	include ../lib/header/h-14/index.pug
 block body
+	include ../lib/contact/c-1/index.pug
 	include ../lib/form/f-1/index.pug
+block footer
+	include ../lib/footer/f-1/index.pug
+	include ../lib/footer/f-7/index.pug
