--- a/lib/footer/f-7/index.pug
+++ b/lib/footer/f-7/index.pug
@@ -42,4 +42,5 @@ footer.canhcam-footer-7
 						a(href="#") Chính sách bảo mật
 						a(href="#") Sơ đồ trang
 				.col
-					span © 2018 ABC.,Ltd . All Rights Reserved. Designed by Cánh Cam.
+					span © 2018 ABC.,Ltd . All Rights Reserved. Designed by 
+						a(href="https://www.canhcam.vn/") Cánh Cam.
