--- a/lib/header/h-14/index.pug
+++ b/lib/header/h-14/index.pug
@@ -33,22 +33,22 @@ header.canhcam-header-14
 						| Đăng nhập
 			ul.nav
 				li.nav-item.active
-					a.nav-link.home(href='#') 
+					a.nav-link.home(href='./index.html') 
 						em.mdi.mdi-home
 				li.nav-item
-					a.nav-link(href='#') Giới thiệu
+					a.nav-link(href='./about.html') Giới thiệu
 				li.nav-item
-					a.nav-link(href='#') Dự án
+					a.nav-link(href='./project.html') Dự án
 				li.nav-item
-					a.nav-link(href='#') Bán/ Cho thuê
+					a.nav-link(href='./sale.html') Bán/ Cho thuê
 				li.nav-item
-					a.nav-link(href='#') Blog
+					a.nav-link(href='./blog.html') Blog
 				li.nav-item
-					a.nav-link(href='#') Hỗ trợ
+					a.nav-link(href='./support.html') Hỗ trợ
 				li.nav-item
-					a.nav-link(href='#') Quy trình cộng tác viên
+					a.nav-link(href='./process.html') Quy trình cộng tác viên
 				li.nav-item
-					a.nav-link(href='#') Liên hệ
+					a.nav-link(href='./contact.html') Liên hệ
 			#advbar
 			#contactinfo
 			#social
