--- a/lib/nav/n-8/index.pug
+++ b/lib/nav/n-8/index.pug
@@ -1,9 +1,9 @@
 .section.canhcam-nav-8(data-fix="80", data-fix-type="initial", data-fix-change="sticky")
 
 	.menu-list
-		a.item.active(href='#') Thông tin cá nhân
-		a.item(href='#') Giỏ hàng
-		a.item(href='#') Lịch sử giao dịch
+		a.item.active(href='./information.html') Thông tin cá nhân
+		a.item(href='./backet.html') Giỏ hàng
+		a.item(href='./history.html') Lịch sử giao dịch
 		a.item(href='#') Lịch sử thanh toán
 		a.item(href='#') Đổi mật khẩu
 		a.item(href='#') Hướng dẫn sử dụng
