--- a/lib/backet/b-1/index.pug
+++ b/lib/backet/b-1/index.pug
@@ -5,7 +5,7 @@ section.canhcam-backet-1
 				include ../../nav/n-8/index.pug
 			.col-lg-9
 				.info.mt-5.mt-lg-0
-					h1.antuong-title.upcase.text-center.main.mb-4 Giỏ hàng
+					h1.antuong-title.upcase.text-center.main.mb-4.mb-lg-5 Giỏ hàng
 					.row.no-gutters
 						.col-md-6.col-lg-4
 							a.item(href="#")
