--- a/lib/boxes/b-1/index.pug
+++ b/lib/boxes/b-1/index.pug
@@ -7,17 +7,17 @@ section.canhcam-boxes-1
 					.col.text-center
 						img.img-fluid.mb-5(src='./img/antuong/home/home_icon_1.png')
 						h3 Đăng ký cộng tác viên
-						p Rerum totam dolor tenetur! Numquam sequi animi ex ut aliquid dolores. Ad facere placeat vero accusantium natus earum illo, fugit eligendi ipsam!
+						p Tạo tài khoản để bắt đầu kiếm thu nhập
 			.item.col-lg-4.col-12
 				.row.no-gutters
 					.col.text-center
 						img.img-fluid.mb-5(src='./img/antuong/home/home_icon_2.png')
 						h3 Bán sản phẩm
-						p Rerum totam dolor tenetur! Numquam sequi animi ex ut aliquid dolores. Ad facere placeat vero accusantium na
+						p Đăng sản phẩm bất động sản và chia sẻ với mọi người
 			.item.col-lg-4.col-12
 				.row.no-gutters
 					.col.text-center
 						img.img-fluid.mb-5(src='./img/antuong/home/home_icon_3.png')
 						h3 Nhận hoa hồng
-						p Rerum totam dolor tenetur! Numquam sequi animi ex ut al
+						p Nhận hoa hồng từ mỗi sản phẩm bán/ cho thuê thành công
 		a.btn.btn-more(href="#") Xem thêm
