--- a/lib/footer/f-7/index.pug
+++ b/lib/footer/f-7/index.pug
@@ -33,6 +33,9 @@ footer.canhcam-footer-7
 						p Đăng kí nhận những cập nhật mới nhất về bất động sản & Tip kiếm tiền online hiệu quả với An Tường Real.
 						.search.d-flex
 							input.form-control(type='text', placeholder="Địa chỉ email...", aria-label="Search", aria-describedby='basic-addon2')
+							.input-group-append
+								button.btn.btn-send.searchbtn(type='button')
+									u Gửi
 
 	.container
 		.copy-right
@@ -42,5 +45,6 @@ footer.canhcam-footer-7
 						a(href="#") Chính sách bảo mật
 						a(href="#") Sơ đồ trang
 				.col
-					span © 2018 ABC.,Ltd . All Rights Reserved. Designed by 
+					span Copyright © 2018 An Tường Real. All Rights Reserved. Designed by 
 						a(href="https://www.canhcam.vn/") Cánh Cam.
+	img#advisory(src="./img/antuong/chat.png", alt="")
