--- a/lib/header/h-14/index.pug
+++ b/lib/header/h-14/index.pug
@@ -23,7 +23,7 @@ header.canhcam-header-14
 					a(href="#") 
 						em.fab.fa-facebook-f
 					a(href="#") 
-						em.fab.fa-youtube
+						em.fa.fa-youtube
 					a(href="#") 
 						em.fa.fa-envelope
 				li.d-flex.button
