--- a/lib/home/h-2/index.sass
+++ b/lib/home/h-2/index.sass
@@ -14,7 +14,7 @@
 			content: ''
 			width: 100%
 			height: 2px
-			background: darken(color-get($mau,trang),20%)
+			background: #ebebeb
 			position: absolute
 			top: 50%
 			left: 0
@@ -26,7 +26,7 @@
 			.nav-link
 				+pad(.3rem 1rem)
 				position: relative
-				border: 2px solid darken(color-get($mau,trang),20%)
+				border: 2px solid #ebebeb
 				background: darken(color-get($mau,trang),0%)
 				color: darken(color-get($mau,text-1),0%)
 				+bor-rad(5px)
@@ -84,6 +84,7 @@
 				background: color-get($mau,main)
 				color: color-get($mau,trang)
 				+fz(1.3rem)
+				text-transform: uppercase
 				+bor-rad(5px)
 				+fw(600)
 				&:hover
