--- a/lib/home/h-4/index.pug
+++ b/lib/home/h-4/index.pug
@@ -10,15 +10,15 @@ section.canhcam-home-4(bg-img='./img/antuong/bg_3.png')
 								| +
 						.text.mt-4.text-center.text-lg-left
 							img(src="./img/antuong/home/home_icon_8.png", alt="")
-							p Lorem ipsum dolor sit jolor sit j
+							p Cộng tác viên tham gia
 			
-			.col-sm-5.mt-5.mt-lg-0
+			.col-sm-5.mt-5.mt-md-0
 				.item.d-flex.align-items-center.justify-content-center
 					.content.d-lg-flex
 						.count
-							h5(class="counter", data-duration="8000", data-count="2350") 0
+							h5(class="counter", data-duration="8000", data-count="23510") 0
 							span
 								| +
 						.text.mt-4.text-center.text-lg-left
-							img(src="./img/antuong/home/home_icon_8.png", alt="")
-							p Lorem ipsum dolor sit jolor sit j
+							img(src="./img/antuong/home/home_icon_9.png", alt="")
+							p Sản phẩm được ATR cung cấp
