--- a/lib/home/h-4/index.sass
+++ b/lib/home/h-4/index.sass
@@ -7,6 +7,7 @@
 	+pad(3rem null)
 	+media-breakpoint-up(lg)
 		+pad(4rem null)
+
 	.number
 		.item
 			min-height: 180px
@@ -37,3 +38,5 @@
 				.text
 					margin-left: 3rem
 					max-width: 150px
+.abc
+	dots: calc(100% * 1000)
