--- a/lib/backet/b-1/index.sass
+++ b/lib/backet/b-1/index.sass
@@ -22,9 +22,9 @@ section.canhcam-backet-1
 					+pad(1rem)
 					+bor(null, solid darken(color-get($mau,trang),20%),1px)
 					h5
-						+fw(700)
+						+fw(600)
 						+fz(1.2rem)
-						color: color-get($mau,main)
+						color: color-get($mau,den)
 						margin-bottom: 1rem
 					p
 						color: color-get($mau,text-2)
