--- a/lib/home/h-1/index.sass
+++ b/lib/home/h-1/index.sass
@@ -4,9 +4,9 @@
 //////////////////////////////////////
 	
 section.canhcam-home-1
-	+pad(3rem null)
+	+pad(3rem null 0)
 	+media-breakpoint-up(lg)
-		+pad(4rem null)
+		+pad(4rem null 0)
 	.row
 		margin-top: 2rem
 		.about
