--- a/lib/home/h-3/index.sass
+++ b/lib/home/h-3/index.sass
@@ -26,6 +26,7 @@ section.canhcam-home-3
 					margin-bottom: 1rem
 				p
 					+fz(1rem)
+					+fw(400)
 					color: color-get($mau,text-2)
 				span
 					text-transform: uppercase
