--- a/lib/styles/common/_btt.sass
+++ b/lib/styles/common/_btt.sass
@@ -1,29 +1,32 @@
+@import ../../_includes
+//////////////////////////////////////
+// CODE
+//////////////////////////////////////
 #back-to-top
 	position: fixed
 	bottom: 20px
 	right: 20px
 	z-index: 8888
 	text-align: center
-	background: #f5f5f5
-	color: #444
+	background: #ccc!important
+	color: #0099cc!important
+	width: 45px
+	height: 45px
 	cursor: pointer
 	border: 0
-	border-radius: 2px
+	+pad(1rem)
+	border-radius: 50%
 	text-decoration: none
 	transition: opacity 0.2s ease-out
 	opacity: 0
 	display: none
-	+pad(.25rem .5rem)
 	+media-breakpoint-up(md)
 		bottom: 40px
 		right: 40px
-	span
-		display: block
 	i
+		+fz(1.5rem)
 		line-height: .75rem
 		height: .75rem
-	&:hover
-		background: #e9ebec
 	&.show
 		opacity: 1
 		display: block
