--- a/templates/_layout/layout.pug
+++ b/templates/_layout/layout.pug
@@ -36,8 +36,7 @@ html(dir='ltr', lang=config.SEO.seo_lang, itemscope, itemtype="http://schema.org
 		<!-- ////////////// End Footer ////////////// -->
 		<!-- ////////////// Back to Top ////////////// -->
 		a(href="#top-page", id="back-to-top", title="Back to top")
-			span TOP
-			i.fa.fa-angle-up
+			i.fa.fa-arrow-up
 		<!-- ////////////// Javascript Include ////////////// -->
 		include ../_include/_script
 		block js
