--- a/lib/about/a-2/index.sass
+++ b/lib/about/a-2/index.sass
@@ -25,7 +25,7 @@ section.canhcam-about-2
 				.content
 					margin-left: -20px
 					+fw(300)
-					color: color-rgba(color-get($mau,trang),.6)
+					color: #b8dbe7
 		&:hover
 			.boxzoom
 				img
