--- a/lib/blog/b-1/index.pug
+++ b/lib/blog/b-1/index.pug
@@ -1,6 +1,6 @@
 section.canhcam-blog-1
 	.container
-		h1.antuong-title.upcase.mb-4.mb-lg-5 blog
+		h1.antuong-title.upcase.mb-4 blog
 		.row
 			.col-lg-4
 				a.item(href="#")
