--- a/lib/bonus/b-1/index.sass
+++ b/lib/bonus/b-1/index.sass
@@ -33,8 +33,8 @@ section.canhcam-bonus-1
 				+bor-rad(5px)
 				+fw(600)
 				&:hover
-					background: color-get($mau,trang)
-					color: color-get($mau,extra)
+					background: darken(color-get($mau,extra),15%)
+					color: color-get($mau,text-1)
 		+media-breakpoint-up(md)
 			flex-direction: row
 			.content
