--- a/lib/boxes/b-9/index.pug
+++ b/lib/boxes/b-9/index.pug
@@ -26,4 +26,5 @@ section.canhcam-services-9
 							li Hình thức thanh toán: chuyển khoản ngân hàng vào tài khoản mà Cộng tác viên cung cấp ( Lưu ý: Tài khoản ngân hàng phải của Cộng tác viên, không giải quyết tất cả trường hợp không có tài khoản, nhận thay )
 							li.mb-3 Số tiền tối thiểu để được thanh toán là 50.000,000 VNĐ
 							li Ví  dụ: nếu bạn bắt đầu bán hàng trong tháng 1 thì tất cả đơn hàng thành công từ ngày 1/1 đến 30/1 sẽ được chốt vào vào ngày 01/03 và các bạn nhận được hoa hồng của tháng 01 vào ngày 20/3.
-						a.btn.btn-register.mt-4 Đăng ký cộng tác viên atr
+						button.mt-4.btn.btn-register.text-uppercase(type="submit")
+							| Đăng ký cộng tác viên ATR
