--- a/lib/boxes/b-9/index.sass
+++ b/lib/boxes/b-9/index.sass
@@ -21,7 +21,7 @@
 			+fz(1rem)
 			+fw(400)
 			color: color-get($mau,text-2)
-		a.btn-register
+		.btn-register
 			+pad(.3rem 4rem)
 			background: color-get($mau,extra)
 			color: color-get($mau,text-1)
