--- a/lib/breadcrumb/b-1/index.sass
+++ b/lib/breadcrumb/b-1/index.sass
@@ -55,7 +55,7 @@
 				+media-breakpoint-up(sm)
 					min-height: 320px
 				+media-breakpoint-up(lg)
-					min-height: 360px
+					min-height: 25rem
 				.title
 					+pos(abs, null null 3rem 0)
 					text-align: center
