--- a/lib/footer/f-7/index.pug
+++ b/lib/footer/f-7/index.pug
@@ -47,4 +47,5 @@ footer.canhcam-footer-7
 				.col
 					span Copyright © 2018 An Tường Real. All Rights Reserved. Designed by 
 						a(href="https://www.canhcam.vn/") Cánh Cam.
-	img#advisory(src="./img/antuong/chat.png", alt="")
+	a(href="#")
+		img#advisory(src="./img/antuong/chat.png", alt="")
