--- a/lib/home/h-2/index.sass
+++ b/lib/home/h-2/index.sass
@@ -88,8 +88,8 @@
 				+bor-rad(5px)
 				+fw(600)
 				&:hover
-					background: color-get($mau,trang)
-					color: color-get($mau,main)
+					background: darken(color-get($mau,extra),10%)
+					color: color-get($mau,text-1)
 		+media-breakpoint-up(md)
 			flex-direction: row
 			.content
