--- a/lib/nav/n-1/index.sass
+++ b/lib/nav/n-1/index.sass
@@ -51,8 +51,11 @@
 					&.active,&:hover
 						color: color-get($mau,text-1)
 						background: color-get($mau,extra)
+					&.active
 						&:after
 							display: none
+						+fw(600)
+						
 				&:last-child
 					a
 						&:after
