--- a/lib/nav/n-2/index.sass
+++ b/lib/nav/n-2/index.sass
@@ -53,6 +53,9 @@
 						background: color-get($mau,extra)
 						&:after
 							display: none
+					&.active
+						+fw(600)
+						
 				&:last-child
 					a
 						&:after
