--- a/lib/nav/n-4/index.sass
+++ b/lib/nav/n-4/index.sass
@@ -45,6 +45,8 @@
 						background: color-get($mau,extra)
 						&:after
 							display: none
+					&.active
+						+fw(600)
 				&:last-child
 					a
 						&:after
