--- a/lib/nav/n-5/index.pug
+++ b/lib/nav/n-5/index.pug
@@ -8,6 +8,6 @@ section.canhcam-nav-5
 					li
 						a(href="#") Mẹo quản lí tài chính
 					li
-						a(href="#") Vay ngân hàng
+						a(href="./borrow.html") Vay ngân hàng
 					li
 						a(href='#') Tư vấn thiết kế
