--- a/lib/project-detail/p-1/index.pug
+++ b/lib/project-detail/p-1/index.pug
@@ -1,6 +1,6 @@
 section.canhcam-project-detail-1#canhcam-detail-section-1
 	.container
-		.row
+		.row.no-gutters
 			.col-lg-6.order-2.order-lg-1.mt-5.mt-lg-0
 				img.img-fluid.w-100(src='./img/antuong/project_detail/detail_1.png')
 			.col-lg-6.content-right.order-1.order-lg-2
