--- a/lib/sale/s-1/index.pug
+++ b/lib/sale/s-1/index.pug
@@ -1,14 +1,12 @@
 section.canhcam-sale-1
 	.container
-		h1.antuong-title.mb-5.upcase Bất động sản bán
+		h1.antuong-title.mb-4.upcase Bất động sản bán
 		.select
 			.row
 				.col-lg-3
 					.sl-city(data-mh="select")
 						select
-							option Tỉnh/ Thành phố
-							option Đồng Nai
-							option Sài Gòn
+							option Loại bất động sản
 				.col-lg-3
 					.sl-city(data-mh="select")
 						select
@@ -18,27 +16,19 @@ section.canhcam-sale-1
 				.col-lg-3
 					.sl-city(data-mh="select")
 						select
-							option Tỉnh/ Thành phố
-							option Đồng Nai
-							option Sài Gòn
+							option Chọn Quận/ Huyện
 				.col-lg-3
 					.sl-city(data-mh="select")
 						select
-							option Tỉnh/ Thành phố
-							option Đồng Nai
-							option Sài Gòn
+							option Diện tích
 			.row.mt-lg-3
 				.col-lg-3
 					.sl-city(data-mh="select")
 						select
-							option Tỉnh/ Thành phố
-							option Đồng Nai
-							option Sài Gòn
+							option Giá
 				.col-lg-3
 					.sl-city(data-mh="select")
 						select
-							option Tỉnh/ Thành phố
-							option Đồng Nai
-							option Sài Gòn
+							option Chọn hướng nhà
 				.col-lg-3.text-center.text-lg-left
 					a.btn.btn-search(href='#' data-mh="select") Tìm Ngay
