--- a/lib/styles/common/_btt.sass
+++ b/lib/styles/common/_btt.sass
@@ -8,8 +8,8 @@
 	right: 20px
 	z-index: 8888
 	text-align: center
-	background: #ccc!important
-	color: #0099cc!important
+	background: #ccc
+	color: #0099cc
 	width: 45px
 	height: 45px
 	cursor: pointer
