--- a/lib/tabs/t-2/index.sass
+++ b/lib/tabs/t-2/index.sass
@@ -19,7 +19,7 @@
 				+pad(.5rem 3rem)
 				border: 0
 				+fz(1.1rem)
-				background: darken(color-get($mau,trang),3%)
+				background: #e1e1e1
 				color: darken(color-get($mau,text-1),0%)
 				+bor-rad(0)
 				&.active
