--- a/lib/backet/b-1/index.pug
+++ b/lib/backet/b-1/index.pug
@@ -2,7 +2,7 @@ section.canhcam-backet-1
 	.container
 		.row
 			.col-lg-3
-				include ../../nav/n-8/index.pug
+				include ../../nav/n-8/backet.pug
 			.col-lg-9
 				.info.mt-5.mt-lg-0
 					h1.antuong-title.upcase.text-center.main.mb-4.mb-lg-5 Giỏ hàng
