--- a/lib/history/h-1/index.pug
+++ b/lib/history/h-1/index.pug
@@ -2,7 +2,7 @@ section.canhcam-history-1
 	.container
 		.row
 			.col-lg-3
-				include ../../nav/n-8/index.pug
+				include ../../nav/n-8/history.pug
 			.col-lg-9
 				.table-result.mt-5.mt-lg-0
 					h1.antuong-title.upcase.mb-4.mb-lg-5.main lịch sử giao dịch
