--- a/lib/project/p-2/index.sass
+++ b/lib/project/p-2/index.sass
@@ -11,9 +11,9 @@ section.canhcam-project-2
 		figure
 			figcaption
 				+pad(1rem)
-				+bor(null, solid darken(color-get($mau,trang),20%),1px)
+				+bor(null, solid #e5e5e5,1px)
 				h5
-					+fw(700)
+					+fw(600)
 					+fz(1.2rem)
 					color: color-get($mau,main)
 					margin-bottom: 1rem
@@ -26,7 +26,7 @@ section.canhcam-project-2
 			.status
 				justify-content: space-between
 				+pad(1rem)
-				+bor(null, solid darken(color-get($mau,trang),20%),1px)
+				+bor(null, solid #e5e5e5,1px)
 				border-top: 0
 				p
 					margin-bottom: 0
